# meetingai-shared

./: .env.example  .gitignore  README.md  __init__.py  config.py  pyproject.toml
contracts/: __init__.py  dto.py  note_schema.py  repositories.py
migrations/: add_meeting_final_transcript_fields.sql  create_meeting_note_mail_deliveries.sql  create_meeting_participants.sql
repositories/: __init__.py  meeting_store.py  store_notes_mail.py  store_utils.py
scripts/: sync_users.py
